--- a/src/html/index.html
+++ b/src/html/index.html
@@ -86,6 +86,32 @@
             <script src="../js/task1.js"></script>
         </div>
     </div>
+
+    <div class="task-container">
+        <h1 class="task-container__title task-container__title_margin">Task_4 (calculator)</h1>
+        <div>
+            <label>Enter numbers:</label>
+            <input type="text" id="task4_input-first" class="task-container__input" required>
+            <input type="text" id="task4_input-second" class="task-container__input" required>
+        </div>
+        <div class="task-container__output">
+            <select id="selectOperation">
+                <option value="+">+</option>
+                <option value="-">-</option>
+                <option value="*">*</option>
+                <option value="/">/</option>
+            </select>
+            <p> - operation</p>
+        </div>
+        <div class="task-container__margin">
+            <button type="button" id="task4_button" class="task-container__button">calculate</button>
+            <script src="../js/task1.js"></script>
+        </div>
+        <div class="task-container__output">
+            <p>Result:</p>
+            <output id="task4_operationOutput"></output>
+        </div>
+    </div>
 </body>
 
 </html>
