add: finished weather forecast

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -85,7 +85,7 @@
     </div>
 
     <div class="task-container">
-        <h1 class="task-container__title task-container__title_margin">Task_4 (calculator)</h1>
+        <h1 class="task-container__title task-container__title_margin">Task_4,8 (calculator)</h1>
         <div>
             <label>Enter numbers:</label>
             <input type="text" id="task4_input-first" class="task-container__input" required>
@@ -151,6 +151,11 @@
         </div>
         
     </div>
-    <script src="../js/task1.js"></script>
+
+    <div class="task-container">
+        <h1 class="task-container__title task-container__title_margin">Task_8 (Weather)</h1>
+        <a href="weather.html">Click on me :)</a>
+    </div>
+    <script src="../js/tasks.js"></script>
 </body>
 </html>
