fix: fixed 3,5,8 tasks

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -119,7 +119,7 @@
         <div class="task-container__output">
             <select id="selectAlgorithm">
                 <option value="Bubble-sort">Bubble sort</option>
-                <option value="Quick-sort">Quick sort</option>
+                <option value="Selection-sort">Selection sort</option>
                 <option value="Insertion-sort">Insertion sort</option>
             </select>
             <p> - sorting algorithms</p>
